2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (hurd_activation_state_alloc): Cast UTCB to a void *.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* storage.c (struct storage_desc): Add field owner.
	(shadow_setup): Set DESC->OWNER appropriately.
	(storage_alloc): Likewise.
	(storage_free_): Likewise.
	(storage_init): Likewise.
	
	(storage_alloc): Move code that updates DESC to before we call
	rm_folio_object_alloc.  Unlock DESC->LOCK before calling it.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (hurd_activation_state_alloc): Set UTCB->TID.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* message-buffer.c (num_threads): New function.
	(BUFFERS_LOW_WATER): Define in terms of the number of threads.
	(BUFFERS_HIGH_WATER): Likewise.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* message-buffer.c (hurd_message_buffer_alloc): Fix compare and
	swap logic.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* message-buffer.c: Include <hurd/mm.h>.
	(hurd_message_buffer_free_internal): Remove function.  Move body
	to...
	(hurd_message_buffer_free): ... this function.  Update users.
	(BUFFERS_HIGH_WATER): New define.
	(hurd_message_buffer_alloc): If the number of buffers in the
	reserve dips below BUFFERS_LOW_WATER, allocate enough to
	BUFFERS_HIGH_WATER.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* as-build-custom.c (as_insert_custom): Don't use vg_cap_copy but
	vg_cap_copy_simple.
	* as.h (as_insert_full): Likewise.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* exceptions.c (hurd_activation_fetch): Use
	vg_thread_activation_collect_send, not
	rm_thread_activation_collect_send.
	(hurd_activation_handler_init_early): Use
	vg_thread_exregs_send_marshal, not rm_thread_exregs_send_marshal.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* anonymous.h: Don't include <hurd/exceptions.h>.
	* as.h: Likewise.
	* exceptions.c: Likewise.
	* map.h: Likewise.
	* message-buffer.c: Likewise.
	* mm-init.c: Likewise.